# workspace-tools

./: Makefile  pyproject.toml
src/: main.py  test.py
src/files/: dir_compare.py  file_rename.py  pdf_file_rename.py
src/gui/: ui.kv  ui_app.py
