[project]
name = "workspace-tools"
version = "0.1.0"
description = ""
authors = [{ name = "behike56", email = "engineering@lambda-publishing.dev" }]
license = { text = "Apache License 2" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pdfplumber (>=0.11.7,<0.12.0)", "argparse (>=1.4.0,<2.0.0)"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
